tests/ui/derives/eq-ord/derives-span-PartialOrd.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd.rs:10:9
   |
LL | #[derive(PartialOrd, PartialEq)]
   |          ---------- in this derive macro expansion
...
LL |         x: Error,
   |         ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
help: consider annotating `Error` with `#[derive(PartialOrd)]`
   |
LL + #[derive(PartialOrd)]
LL | struct Error;
   |

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd.rs:17:9
   |
LL | #[derive(PartialOrd, PartialEq)]
   |          ---------- in this derive macro expansion
...
LL |         Error,
   |         ^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
help: consider annotating `Error` with `#[derive(PartialOrd)]`
   |
LL + #[derive(PartialOrd)]
LL | struct Error;
   |

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd.rs:23:5
   |
LL | #[derive(PartialOrd, PartialEq)]
   |          ---------- in this derive macro expansion
LL | struct Struct {
LL |     x: Error,
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
help: consider annotating `Error` with `#[derive(PartialOrd)]`
   |
LL + #[derive(PartialOrd)]
LL | struct Error;
   |

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd.rs:28:5
   |
LL | #[derive(PartialOrd, PartialEq)]
   |          ---------- in this derive macro expansion
LL | struct TupleStruct(
LL |     Error,
   |     ^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
help: consider annotating `Error` with `#[derive(PartialOrd)]`
   |
LL + #[derive(PartialOrd)]
LL | struct Error;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
